Better pie chart example, progress on bar chart

--- a/Rtutorial.bib
+++ b/Rtutorial.bib
@@ -58,3 +58,31 @@
 	urldate = {2018-09-10},
 	file = {Quick-R\: Data Types:C\:\\Users\\megha\\Zotero\\storage\\9MJ8NG7I\\datatypes.html:text/html}
 }
+
+@misc{who,
+	title = {Ebola {Situation} {Reports} {\textbar} {Ebola}},
+	url = {http://apps.who.int/ebola/ebola-situation-reports},
+	urldate = {2018-09-10},
+	author = {World Health Organization},
+	file = {Ebola Situation Reports | Ebola:C\:\\Users\\megha\\Zotero\\storage\\39MFQQTY\\ebola-situation-reports.html:text/html}
+}
+
+@misc{gapminder,
+	title = {Infant mortality rate (per 1,000 live birth)},
+	url = {https://docs.google.com/spreadsheets/d/1OHMMuHbSFKDolNHXsmgHYlkjSKfAZyyY1P-ddMu_Fz0/pub#},
+	urldate = {2018-09-10},
+	author = {Johannson, Klara and Lindgren, Mattias and Rosling, Ola},
+	month = oct,
+	year = {2015},
+	file = {indicator gapminder infant_mortality:C\:\\Users\\megha\\Zotero\\storage\\8DMI5AJH\\pub.html:text/html}
+}
+
+@misc{rcolors,
+	title = {Chart of {R} {Colors}},
+	url = {http://research.stowers.org/mcm/efg/R/Color/Chart/},
+	urldate = {2018-09-10},
+	author = {Glynn, Earl F.},
+	month = apr,
+	year = {2005},
+	file = {Chart of R Colors:C\:\\Users\\megha\\Zotero\\storage\\FBQITQTN\\Chart.html:text/html}
+}
