One more paragraph...

--- a/tutorial.tex
+++ b/tutorial.tex
@@ -296,6 +296,7 @@ par()$mar
 > box()
 \end{minted}
 
+Now, bar charts often use stacked bars. For example, let's say you wanted to display the mortality rate for 1950 and 2000 for each of G8 countries.
 
 	\subsection{Histogram}
 	\subsection{Line graph}
