Reorganized to have a section about variables and a section about R plumbing.

--- a/Rtutorial.bib
+++ b/Rtutorial.bib
@@ -86,3 +86,93 @@
 	year = {2005},
 	file = {Chart of R Colors:C\:\\Users\\megha\\Zotero\\storage\\FBQITQTN\\Chart.html:text/html}
 }
+
+@techreport{cancer,
+	address = {Atlanta},
+	title = {Cancer {Facts} \& {Figures} 2018},
+	url = {https://www.cancer.org/research/cancer-facts-statistics/all-cancer-facts-figures/cancer-facts-figures-2018.html},
+	abstract = {Cancer Facts \& Statistics},
+	language = {en},
+	urldate = {2018-09-13},
+	author = {American Cancer Society},
+	year = {2018},
+	file = {Snapshot:C\:\\Users\\Myriam\\Zotero\\storage\\ES5CQSHL\\cancer-facts-figures-2018.html:text/html}
+}
+
+@article{siegel_cancer_2018,
+	title = {Cancer statistics, 2018},
+	volume = {68},
+	copyright = {© 2018 American Cancer Society},
+	issn = {1542-4863},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.3322/caac.21442},
+	doi = {10.3322/caac.21442},
+	abstract = {Each year, the American Cancer Society estimates the numbers of new cancer cases and deaths that will occur in the United States and compiles the most recent data on cancer incidence, mortality, and survival. Incidence data, available through 2014, were collected by the Surveillance, Epidemiology, and End Results Program; the National Program of Cancer Registries; and the North American Association of Central Cancer Registries. Mortality data, available through 2015, were collected by the National Center for Health Statistics. In 2018, 1,735,350 new cancer cases and 609,640 cancer deaths are projected to occur in the United States. Over the past decade of data, the cancer incidence rate (2005-2014) was stable in women and declined by approximately 2\% annually in men, while the cancer death rate (2006-2015) declined by about 1.5\% annually in both men and women. The combined cancer death rate dropped continuously from 1991 to 2015 by a total of 26\%, translating to approximately 2,378,600 fewer cancer deaths than would have been expected if death rates had remained at their peak. Of the 10 leading causes of death, only cancer declined from 2014 to 2015. In 2015, the cancer death rate was 14\% higher in non-Hispanic blacks (NHBs) than non-Hispanic whites (NHWs) overall (death rate ratio [DRR], 1.14; 95\% confidence interval [95\% CI], 1.13-1.15), but the racial disparity was much larger for individuals aged {\textless}65 years (DRR, 1.31; 95\% CI, 1.29-1.32) compared with those aged ≥65 years (DRR, 1.07; 95\% CI, 1.06-1.09) and varied substantially by state. For example, the cancer death rate was lower in NHBs than NHWs in Massachusetts for all ages and in New York for individuals aged ≥65 years, whereas for those aged {\textless}65 years, it was 3 times higher in NHBs in the District of Columbia (DRR, 2.89; 95\% CI, 2.16-3.91) and about 50\% higher in Wisconsin (DRR, 1.78; 95\% CI, 1.56-2.02), Kansas (DRR, 1.51; 95\% CI, 1.25-1.81), Louisiana (DRR, 1.49; 95\% CI, 1.38-1.60), Illinois (DRR, 1.48; 95\% CI, 1.39-1.57), and California (DRR, 1.45; 95\% CI, 1.38-1.54). Larger racial inequalities in young and middle-aged adults probably partly reflect less access to high-quality health care. CA Cancer J Clin 2018;68:7-30. © 2018 American Cancer Society.},
+	language = {en},
+	number = {1},
+	urldate = {2018-09-16},
+	journal = {CA: A Cancer Journal for Clinicians},
+	author = {Siegel, Rebecca L. and Miller, Kimberly D. and Jemal, Ahmedin},
+	month = jan,
+	year = {2018},
+	keywords = {cancer cases, cancer statistics, death rates, incidence, mortality},
+	pages = {7--30},
+	file = {Full Text PDF:C\:\\Users\\Myriam\\Zotero\\storage\\AZHUN67B\\Siegel et al. - 2018 - Cancer statistics, 2018.pdf:application/pdf;Snapshot:C\:\\Users\\Myriam\\Zotero\\storage\\KCP99GZC\\caac.html:text/html}
+}
+
+@book{vigen,
+	title = {Spurious {Correlations}},
+	isbn = {978-0-316-33943-8},
+	abstract = {Military intelligence analyst and Harvard Law student Tyler Vigen illustrates the golden rule that "correlation does not equal causation" through hilarious graphs inspired by his viral website.},
+	language = {English},
+	publisher = {Hachette Books},
+	author = {Vigen, Tyler},
+	month = may,
+	year = {2015}
+}
+
+@article{knee,
+	title = {Arthroscopic surgery for degenerative knee arthritis and meniscal tears: a clinical practice guideline},
+	volume = {357},
+	copyright = {Published by the BMJ Publishing Group Limited. For permission to use (where not already granted under a licence) please go to http://group.bmj.com/group/rights-licensing/permissions. This is an Open Access article distributed in accordance with the Creative Commons Attribution Non Commercial (CC BY-NC 4.0) license, which permits others to distribute, remix, adapt, build upon this work non-commercially, and license their derivative works on different terms, provided the original work is properly cited and the use is non-commercial. See: http://creativecommons.org/licenses/by-nc/4.0/.},
+	issn = {1756-1833},
+	shorttitle = {Arthroscopic surgery for degenerative knee arthritis and meniscal tears},
+	url = {https://www.bmj.com/content/357/bmj.j1982},
+	doi = {10.1136/bmj.j1982},
+	abstract = {\#\#\#\# What you need to know
+	
+	What is the role of arthroscopic surgery in degenerative knee disease? An expert panel produced these recommendations based on a linked systematic review triggered by a randomised trial published in The BMJ in June 2016, which found that, among patients with a degenerative medial meniscus tear, knee arthroscopy was no better than exercise therapy. The panel make a strong recommendation against arthroscopy for degenerative knee disease. Box 1 shows all of the articles and evidence linked in this Rapid Recommendation package. The infographic provides an overview of the absolute benefits and harms of arthroscopy in standard GRADE format. Table 2 below shows any evidence that has emerged since the publication of this article.
+	
+	\#\#\#\# Box 1: Linked articles in this BMJ Rapid Recommendations cluster},
+	language = {en},
+	urldate = {2018-09-18},
+	journal = {BMJ},
+	author = {Siemieniuk, Reed A. C. and Harris, Ian A. and Agoritsas, Thomas and Poolman, Rudolf W. and Brignardello-Petersen, Romina and Velde, Stijn Van de and Buchbinder, Rachelle and Englund, Martin and Lytvyn, Lyubov and Quinlan, Casey and Helsingen, Lise and Knutsen, Gunnar and Olsen, Nina Rydland and Macdonald, Helen and Hailey, Louise and Wilson, Hazel M. and Lydiatt, Anne and Kristiansen, Annette},
+	month = may,
+	year = {2017},
+	pmid = {28490431},
+	pages = {j1982},
+	file = {Full Text PDF:C\:\\Users\\Myriam\\Zotero\\storage\\R346GWQU\\Siemieniuk et al. - 2017 - Arthroscopic surgery for degenerative knee arthrit.pdf:application/pdf;Snapshot:C\:\\Users\\Myriam\\Zotero\\storage\\4E4D3H7A\\bmj.html:text/html}
+}
+
+@book{doe,
+	edition = {9},
+	title = {Design and {Analysis} of {Experiments}},
+	isbn = {978-1-119-32093-7},
+	abstract = {Design and Analysis of Experiments, 9th Edition continues to help senior and graduate students in engineering, business, and statistics-as well as working practitioners-to design and analyze experiments for improving the quality, efficiency and performance of working systems.
+	
+	This bestselling text maintains its comprehensive coverage by including: new examples, exercises, and problems (including in the areas of biochemistry and biotechnology); new topics and problems in the area of response surface; new topics in nested and split-plot design; and the residual maximum likelihood method is now emphasized throughout the book.},
+	language = {English},
+	publisher = {Wiley},
+	author = {Montgomery, Douglas C.},
+	month = apr,
+	year = {2017}
+}
+
+@Manual{R,
+	title = {R: A Language and Environment for Statistical Computing},
+	author = {{R Core Team}},
+	organization = {R Foundation for Statistical Computing},
+	address = {Vienna, Austria},
+	year = {2016},
+	url = {https://www.R-project.org/},
+}
