Tidying section written. Proofreading. Data chapter separated into presentation (figures) and description (means, standard deviation, etc.)

--- a/Rtutorial.bib
+++ b/Rtutorial.bib
@@ -176,3 +176,21 @@
 	year = {2016},
 	url = {https://www.R-project.org/},
 }
+
+@misc{cehq,
+	title = {Données journalières de débit de la rivière {Portneuf} en amont des chutes {Philias}},
+	url = {https://www.cehq.gouv.qc.ca/depot/historique_donnees/fichier/070401_Q.txt},
+	author = {Centre d'expertise hydrique du Québec},
+	month = jun,
+	year = {2012}
+}
+
+@misc{tidy,
+	title = {Data {Tidying}},
+	url = {http://garrettgman.github.io/tidying/},
+	urldate = {2018-09-16},
+	journal = {Data Science with R},
+	author = {Grolemund, Garrett},
+	year = {2015},
+	file = {Data Tidying · Data Science with R:C\:\\Users\\megha\\Zotero\\storage\\UC4U9WA3\\tidying.html:text/html}
+}
